# padlock

./: Cargo.toml  MILESTONE_2_EXPANDED.md  PLAN_LIFECYCLE.md  driver.rs  edgar.iter  test_age_basic  test_authority_operations_direct
.eggs/: edgar.milestone1-completeness-review.analysis.txt  egg.001.age-automation-lifecycle-review.txt  egg.001.edgar-comprehensive-work-analysis.txt  egg.002.edgar-age-integration-guidance.txt  egg.003.pilot-comprehensive-analysis.txt  egg.1.cli-consistency-analysis.txt  egg.1.milestone1-review.txt
.session/: FINAL_SESSION_SUMMARY.md  FUNCTIONAL_VALIDATION_COMPLETE.md  REVIEW_INTEGRATION_SUMMARY.md  SESSION_01_AGE_AUTOMATION_IMPLEMENTATION.md  SESSION_02_CORE_AUTHORITY_IMPLEMENTATION.md  SESSION_03_CLI_RESTRUCTURING_COMPLETE.md  SESSION_04_TESTING_SYSTEM_IMPLEMENTATION.md
.session/.eggs/: edgar.age-automation-patterns.analysis.txt  edgar.lifecycle.dispatcher.analysis.txt  edgar.padlock-current-state.analysis.txt  edgar.strategic.padlock-security-update.analysis.txt  egg.GOLDEN.comprehensive-analysis.txt
docs/agents/: AA_ARCHITECTURE_ASSESSMENT.md  AA_DEV_TODO.md  AA_OBSERVATIONS.md  ARCHITECTURE_CONSOLIDATION_REFERENCE.md  EDGAR_CRITICAL_SECURITY_RECOMMENDATIONS.md  EDGAR_CRYPTOGRAPHIC_ARCHITECTURE_EVALUATION.md  EDGAR_SECURITY_THREAT_ASSESSMENT.md  SECURITY_ANALYSIS_ARCHIVE.md
docs/archive/: old_bash_ROADMAP.md  old_bash_SESSION.md
docs/archive.00/: AGE_AUTOMATION_PLAN.md  SESSION_PROGRESS.md
pilot/: KREX_FINAL_SECURITY_VALIDATION.md
scripts/: start.sh
src/: driver.rs  lib.rs  main.rs
tests/: README.md  run_all_tests.sh
(+41 files in other folders)
