[package]
name = "padlock"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "padlock"
path = "src/main.rs"

[[bin]]
name = "driver"
path = "src/driver.rs"


[dependencies]
# Core dependencies for Age automation
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Authority chain dependencies
sha2 = "0.10"
hex = "0.4"

# RSB framework with re-exported dependencies (optional for now)
# rsb = { git = "https://github.com/oodx/rsb-framework", branch = "main" }
# xstream = { git = "https://github.com/oodx/xstream", branch = "main" }
